refactor: 코드 안정성 수정